Change to the new Ukrainian colors.
Former-commit-id: 020b6ce42a37860ed5f356bb6864a38daef78e03

--- a/web/admin/src/App.css
+++ b/web/admin/src/App.css
@@ -95,7 +95,7 @@ body, #root  {
 }
 
 #navb {
-  background-color: #4F6DB2
+  background-color: rgb(0, 151,206)
 }
 .sidebar {
   background-color: #E36746;
