--- a/web/portal/src/App.css
+++ b/web/portal/src/App.css
@@ -95,7 +95,7 @@ body, #root  {
 }
 
 #navb {
-  background-color: #4F6DB2
+  background-color: rgb(0, 151,206)
 }
 .sidebar {
   background-color: #E36746;
@@ -114,4 +114,13 @@ body, #root  {
 }
 #logout:hover {
   text-decoration: underline;
+}
+
+.spider {
+  background-image: url(../public/bluebackground.svg) ; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+ 
 }
