--- a/web/portal/src/App.css
+++ b/web/portal/src/App.css
@@ -44,10 +44,11 @@ body, #root  {
 #anicanvas {
   width: 100%;
   height: 100%;
-  background: linear-gradient(260deg, #18234b 0%, #123d8b 20%, #5d85cd 50%, #e47253 50%, #dd4920 80%, #89250a 100%);
+  background: linear-gradient(-5deg, #015f81 0%, #0278a2 20%, #0097CE 50%, rgb(255,158,24) 50%, rgb(220, 137, 20)  80%, rgb(199, 124, 18) 100%);
   z-index: 0;
 }
 #loginbox  {
+  color: rgb(199, 124, 18) ;
   color: black;
   text-align: center;
   position: relative;
@@ -79,7 +80,12 @@ body, #root  {
     border-radius: 4px;
   
 }
-
+.dymium-button-link:hover {
+  color: rgb(255,158,24) ;
+  }
+.svgshadow {
+  filter: drop-shadow( 2px 2px 0px #000000);
+}
 .zhigh {
   z-index: 100;
   position: absolute;
@@ -95,7 +101,8 @@ body, #root  {
 }
 
 #navb {
-  background-color: rgb(0, 151,206)
+  background-color: rgb(0, 151,206);
+  text-align: left;
 }
 .sidebar {
   background-color: #E36746;
@@ -123,4 +130,52 @@ body, #root  {
   -o-background-size: cover;
   background-size: cover;
  
+}
+
+.nav-tabs {
+background-color:rgba(0, 151,206, 0.3);
+}
+
+h5 {
+  margin-bottom: 1.2em;
+}
+
+.btn-dymium {
+  background-color: rgb(0, 151,206);  
+  color: white;
+}
+
+.btn-dymium:hover {
+  background-color: rgb(1, 59, 79);
+  color: white;  
+}
+.invalid-feedback  {
+  font-size: 0.7em;
+}
+.valid-feedback {
+  font-size: 0.7em;
+}
+.form-control.is-invalid, .was-validated .form-control:invalid {
+  border-color: #a41c2a;
+}
+.form-select.is-invalid, .was-validated .form-select:invalid {
+  border-color: #a41c2a;
+}
+.invalid-feedback {
+    font-size: 0.7em;
+    color: #a41c2a;
+}
+
+.form-control.is-valid, .was-validated .form-control:valid {
+  border-color: #136841;
+}
+.form-select.is-invalid, .was-validated .form-select:valid {
+  border-color: #136841;
+}
+.form-check-input.is-valid~.form-check-label, .was-validated .form-check-input:valid~.form-check-label {
+  color: #136841;
+}
+.valid-feedback {
+  font-size: 0.7em;
+  color: #136841;
 }
