Downgrade Bootstrap to 4.0
Former-commit-id: b327b7a6c46b45bba0dd33abc6b9f0ed39bf1e51

--- a/web/portal/src/App.css
+++ b/web/portal/src/App.css
@@ -192,3 +192,11 @@ h5 {
 .blue {
   color: rgb(0, 151,206);  
 }
+.nav-tabs .nav-link {
+  background-color: #B1D7EB; 
+}
+
+.nav-tabs .nav-link.active {
+  background-color: #EAF2F8;
+  border-bottom-color: #EAF2F8;
+}
