delete/update work, alerts work
Former-commit-id: 96955a22acc2facd170162c4854845d77c2fe581

--- a/web/portal/src/App.css
+++ b/web/portal/src/App.css
@@ -248,3 +248,9 @@ h5 {
 		webkit-transform: rotate(360deg);
 	}
 }
+
+.form-check-label:hover
+{
+	cursor: pointer;
+	text-decoration: underline !important;
+}
