--- a/web/js/packages/portal/src/app/Sidebar.css
+++ b/web/js/packages/portal/src/app/Sidebar.css
@@ -9,7 +9,7 @@
     top: 0;
     left: 0;
     background-color: var(--primary-color);
-    color: var(--primary-color-text) !important;
+    color: var(--primary-color-text) ;
     overflow-x: hidden;
     padding-top: 13px;
   }
@@ -28,7 +28,7 @@
     padding: 5px 7px 5px 8px;
     text-decoration: none;
     font-size: 17px;
-    color: rgba(255,255,255,1);
+  
     display: block;
     border: none;
     background: none;
@@ -37,7 +37,7 @@
     cursor: pointer;
     outline: none;
     border-bottom: 0.5px solid var(--primary-color-3);
-    color: var(--primary-color-text) !important;
+   
   }
 .side-dropdown-btn {
   padding: 6px 2px 6px 8px
@@ -113,4 +113,5 @@ margin-bottom: 0px !important;
 .sidebartext {
   font-size: 13px !important;
   margin-left: 0.3em;
+  color: rgb(243, 227, 205);
 }
