--- a/web/js/packages/common/Components/Offcanvas.scss
+++ b/web/js/packages/common/Components/Offcanvas.scss
@@ -1,31 +1,35 @@
 .bs-offcanvas {
+    padding: 4px 2px 4px 8px;
     background-color: rgb(245, 238, 228);
     overflow-x: hidden;
     overflow-y: auto;    
-    z-index: 1000;
-    right: 0px;
+    z-index: 10000;
+    right: -500px;
     top: 0px;
     width: 0px;
     border-left: solid #ccc 1px;
-
 }
 .bs-offcanvas-show {
+    right: 0px;
     width: 500px;
 }
 
 .bs-canvas-overlay {
     display: none;
-    z-index: 999;
-    background-color: rgb(165, 165, 165);
-    opacity: 0.4;
+    position: fixed !important;
+
     left: 0px; 
     top: 0px;
 }
 .bs-canvas-overlay-show {
-    width: 500px;
-    display: none;
+    display: block;
+    position: fixed !important;
+    left: 0px; 
+    top: 0px;
+    opacity: 0.4;
+    background-color: rgb(165, 165, 165);    
+    z-index: 9999;
 }
-
 
 .bs-offcanvas-anim {
    transition: all .4s ease-out;
