saving datascope works
Former-commit-id: 6f7faca19f26f7f6f57d3bb21cd45654f5a129c0 [formerly bf355dbbe1041f7eddaeb6eedda64ebccff6322c]
Former-commit-id: f69daaad095f1a159245bb51b0f6219422fb3bb2

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -145,6 +145,9 @@ h5 {
   font-size: 0.7em;
   color: $validation-green;
 }
+input:-internal-autofill-selected {
+  background-color: white;  
+}
 .form-label {
   margin-bottom: 0.15rem;
 }
