Lots of retyping, Edit visually works (in reality only 70%)
Former-commit-id: 9445fe5e15a66be854b631bc294277f9748e0526 [formerly 2ac5f1e19b7cd73db7a6c15c7e033facd4c9b1d1]
Former-commit-id: d6cff77bfc45c196de1825b845657b16f9572aff

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -206,6 +206,13 @@ input:-internal-autofill-selected {
 	webkit-animation: round 1.7s infinite ease;
 	webkit-transform: translateZ(0);
 
+
+}
+.hiddenspinner {
+  opacity: 0.0 !important; 
+  webkit-animation: none !important;
+  transform: none !important;
+  animation: none;
 }
 @keyframes round
 {
