groups mapping UI added
Former-commit-id: 5804d470bc74412f34b61be04239205b0cb17a59 [formerly 35535883cbd06e61aeb89efbd3044e924467b00b]
Former-commit-id: dff05ba703ec20f393cd42b9b02f45f35f2f52f8

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -264,3 +264,13 @@ input:-internal-autofill-selected {
     color: $dark-blue;
   }
 }
+.page-link {
+  padding-bottom: 0.3em;
+  padding-top: 0.3em;
+  font-size: .875rem;
+}
+#scaledtable-pageDropDown {
+  padding-bottom: 0.3em;
+  padding-top: 0.3em;
+  font-size: .875rem;
+}
