create datascope-group interface
Former-commit-id: fc0d30685a6a1b338671da5b80b730a31c96da02 [formerly c65d4beeeadff9123b4bb4bb99118b8add907920]
Former-commit-id: 6597e42bdfa748264fab6bbd09927869b197067b

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -274,3 +274,13 @@ input:-internal-autofill-selected {
   padding-top: 0.3em;
   font-size: .875rem;
 }
+.highlightOption {
+  background: $main-blue !important;
+}
+.highlight {
+  background: $main-blue !important;
+}
+
+.multiSelectContainer li:hover {
+  background: $main-blue !important;
+}
