build rules, filter out system entities
Former-commit-id: 4946d5c2dcb6c6de41942688399e7ef480a179a5 [formerly a94dc1528c0a4c072ad0dc2cb200d14b92a47097]
Former-commit-id: 8f332b98f8112a28cdb023f0d7f146bd9220e840

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -193,7 +193,7 @@ input:-internal-autofill-selected {
 }
 .spinner
 {
-	animation: round 1.4s infinite ease;
+	animation: round 1.0s infinite ease;
 	color: $main-blue;  	
 	font-size: 90px;
 	margin: 0px auto;
@@ -203,16 +203,21 @@ input:-internal-autofill-selected {
 	position: relative;
 	text-indent: -9999em;
 	transform: translateZ(0);
-	webkit-animation: round 1.7s infinite ease;
+	webkit-animation: round 1.0s infinite ease;
 	webkit-transform: translateZ(0);
 
 
 }
 .hiddenspinner {
-  opacity: 0.0 !important; 
-  webkit-animation: none !important;
+
+  #webkit-animation: fadeIn 0.5s ease;
   transform: none !important;
-  animation: none;
+	#animation: fadeIn 0.7s ease;
+  opacity: 0.0;
+}
+@keyframes fadeIn {
+  0% { opacity: 0.6; }
+  100% { opacity: 0; }
 }
 @keyframes round
 {
@@ -284,3 +289,4 @@ input:-internal-autofill-selected {
 .multiSelectContainer li:hover {
   background: $main-blue !important;
 }
+
