--- a/web/js/packages/common/Components/Offcanvas.scss
+++ b/web/js/packages/common/Components/Offcanvas.scss
@@ -4,14 +4,14 @@
     overflow-x: hidden;
     overflow-y: auto;    
     z-index: 10000;
-    right: -500px;
+    right: -600px;
     top: 0px;
     width: 0px;
     border-left: solid #ccc 1px;
 }
 .bs-offcanvas-show {
     right: 0px;
-    width: 500px;
+    width: 600px;
 }
 
 .bs-canvas-overlay {
@@ -36,4 +36,9 @@
    -webkit-transition: all .4s ease-out;
    -moz-transition: all .4s ease-out;
    -ms-transition: all .4s ease-out;
+}
+.offcanvas_handle {
+    cursor: col-resize;
+    height: 100vh;
+    width:1px;
 }
