fake login, gui polish
Former-commit-id: 479aa2ad7692420db3f84169e8351e41bf13a291 [formerly 217db9482cb1926d162b973eae5681df305e12e3]
Former-commit-id: 7cd18455d3d72afd932c073add63f4695eeb4f5b

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -7,6 +7,8 @@ $validation-red: #a41c2a;
 $thick-blue: rgb(2, 101, 137);
 $dark-blue: rgb(1, 57, 77);
 
+$breakdown-width:900px;
+
 body, #root  {
   height: 100vh;
 }
@@ -290,3 +292,21 @@ input:-internal-autofill-selected {
   background: $main-blue !important;
 }
 
+
+.sidebar_container {
+  overflow-x: clip;
+  transition: width 0.1s ease-out;
+  width: 160px;
+}
+
+@media (max-width: $breakdown-width) {
+  .sidebar_container {
+    width: 38px;
+    transition: width 0.1s ease-out;
+ 
+
+  }  
+  .sidebar_container:hover {
+    overflow-x:visible;
+  }
+}  
