--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -100,9 +100,6 @@ body, #root  {
   background-size: cover;
  
 }
-.nav-tabs {
-background-color:rgba(0, 151,206, 0.3);
-}
 h5 {
   margin-bottom: 1.2em;
   color: $thick-blue;
@@ -178,13 +175,39 @@ input:-internal-autofill-selected {
 .nav-tabs .nav-link {
   background-color: #B1D7EB; 
 }
-
 .nav-tabs .nav-link.active {
   background-color: #EAF2F8;
-  border-bottom-color: #EAF2F8;
+  border-bottom: none;
 }
+.nav-tabs {
+  background-color:rgba(0, 151,206, 0.3);
+  }
+  
+.datascopeuse {  
+  .nav-tabs .nav-link {
+    background-color:rgba(206, 215, 222, 0.3);
+  }
+  .nav-tabs .nav-link.active {
+    background-color: #FFFFFF;
+    border-bottom-color: #FFFFFF;
+  }
+  .nav-tabs {
+    background-color:rgba(206, 215, 222, 0.3);
+  }
+  .tab-content {
+    background-color: white;
+    border-bottom: 1px solid rgb(222, 226, 230);
+    border-left: 1px solid rgb(222, 226, 230);
+    border-right: 1px solid rgb(222, 226, 230);
+    min-height: 4em;
+    font-family: monospace;
+    padding-top: 0.6em;
+  }
+}
+
 #search-bar-0 {
-  font-size: 0.8em
+  font-size: 0.8em;
+  padding-top: 0.9em;
 }
 
 #tablecontainer table {
@@ -271,6 +294,14 @@ input:-internal-autofill-selected {
     color: $dark-blue;
   }
 }
+.viewport {
+  background-color: white;
+  color:  $dark-blue;
+  padding: 8px;
+  margin-bottom: 1.5em;
+  border-radius: 4px;
+}
+
 .page-link {
   padding-bottom: 0.3em;
   padding-top: 0.3em;
@@ -291,7 +322,45 @@ input:-internal-autofill-selected {
 .multiSelectContainer li:hover {
   background: $main-blue !important;
 }
+.terminal {
+  width: 50%;
+  padding: 2px 12px ;
+  background: black;
+  color: #7AFB4C;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.5);
+  width: fit-content;
+  block-size: fit-content;
+  font-family: monospace;
+  margin-bottom: 0.5em;
+}
+.clipbtn {
+  background-color: $main-blue;
+  padding-left: 8px; 
+  padding-right: 8px;
+  text-align: center;
+  padding-top: 6px;
+  border-top: 1px solid #efefef;
+  border-left: 1px solid #efefef;
+  border-bottom: 2px solid $dark-blue;
+  border-right: 2px solid $dark-blue;  
+  margin-bottom: 0.5em;
+  color: white;
+  min-height: 28px;
+  &:hover {
+    background-color: $thick-blue;
+  
 
+  }
+  &:active {
+    border-top: 2px solid #efefef;
+    border-left: 2px solid #efefef;
+    border-bottom: 1px solid $dark-blue;
+    border-right: 1px solid $dark-blue;      
+    padding-left: 9px; 
+    padding-right: 7px;    
+    padding-top: 7px;
+  }
+}
 
 .sidebar_container {
   overflow-x: clip;
