copy for code and invocation, cleanup when login with different username

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -345,7 +345,7 @@ input:-internal-autofill-selected {
   border-right: 2px solid $dark-blue;  
   margin-bottom: 0.5em;
   color: white;
-  min-height: 28px;
+  height: 28px;
   &:hover {
     background-color: $thick-blue;
   
