--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -398,4 +398,15 @@ pre {
 
 #testtable td,th {
   text-overflow: ellipsis;
+  width:auto;
+  min-width: 80px;
+  max-width: 300px;
+}
+#testtable table {
+  table-layout: auto !important;
+}
+#testtable {
+  width: 100% !important;
+  text-overflow:  ellipsis !important;
+  overflow: scroll;
 }
