--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -410,3 +410,15 @@ pre {
   text-overflow:  ellipsis !important;
   overflow: scroll;
 }
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 3px;
+
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  background: $main-blue;
+}
