--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -399,7 +399,7 @@ pre {
 #testtable td,th {
   text-overflow: ellipsis;
   width:auto;
-  min-width: 80px;
+  min-width: 60px;
   max-width: 300px;
 }
 #testtable table {
@@ -412,8 +412,8 @@ pre {
 }
 ::-webkit-scrollbar {
   -webkit-appearance: none;
+  height: 3px;
   width: 3px;
-
 }
 
 ::-webkit-scrollbar-thumb {
