--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -448,3 +448,13 @@ td {
 .btn-test.active:hover {
   background-color: rgb(180, 217, 238)   !important;
 }
+
+.card {
+  color: $dark-blue;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-left: 10px;
+  margin-right: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0.3em 0.3em 1em rgba(0, 151,206, 0.4);
+}
