--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -458,6 +458,23 @@ td {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0.3em 0.3em 1em rgba(0, 151,206, 0.4);
+
+}
+
+.licard {
+  font-size: 1.5em;
+  border: 1px solid;
+  list-style: none;
+  padding: 14px;
+  padding-left: 20px !important;
+  margin-top: 8px;
+  margin-left: 0px !important;
+  background-color: #feffff;
+  opacity: 0.7;
+}
+.liouter {
+  padding-inline-start: 0px !important;
+  margin-block-start: 0em !important;
 }
 
 .plusminus {
