--- a/web/js/packages/common/Components/Offcanvas.scss
+++ b/web/js/packages/common/Components/Offcanvas.scss
@@ -36,4 +36,13 @@
     cursor: col-resize;
     height: 100vh;
     width:1px;
+
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(84,84,84,0.7511598389355743) 35%, rgba(221,221,221,1) 100%);
+    opacity: 0.1;
+}
+.offcanvas_handle:hover {
+    opacity: 0.2;
+}
+.cthrough {
+    opacity: 0.9;
 }
