--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -529,3 +529,15 @@ td {
   border-color: $dark-yellow;
   box-shadow: 0px 0px 5px 5px $dark-yellow;
 }
+
+.embed {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  min-height:1600px;
+}
+
+.helptab {
+  min-height: 1600px;
+}
