security cleanup pass 1

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -1,7 +1,7 @@
 $light-gray: #bbbbbb;
 $dark-yellow: rgb(199, 124, 18);
 $main-yellow: rgb(255,158,24);
-$main-blue: rgb(0, 151,206);
+$main-blue: rgb(0, 151, 206);
 $validation-green: #136841;
 $validation-red: #a41c2a;
 $thick-blue: rgb(2, 101, 137);
