[2023-Apr-25-Misc] Refactor tunnel client
Refactor tunnel client
Enable help for connector
Add docker repo to the Download Binaries page
Add mkdir -p to the huild_docker for the portal

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -113,6 +113,9 @@ h5 {
 .thickblue {
   color: $thick-blue;
 }
+a {
+  color: $thick-blue;
+}
 .btn-dymium {
   background-color: $main-blue !important;  
   color: white !important;
