--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -1,11 +1,14 @@
 $light-gray: #bbbbbb;
 $dark-yellow: rgb(199, 124, 18);
-$main-yellow: rgb(255,158,24);
-$main-blue: rgb(0, 151, 206);
+$main-yellow: #fc8f24;
+$main-blue: #0883ba;
+$light-blue: #6ebde6;
 $validation-green: #136841;
 $validation-red: #a41c2a;
-$thick-blue: rgb(2, 101, 137);
-$dark-blue: rgb(1, 57, 77);
+$thick-blue: #00527c;
+$dark-blue: rgb(4, 57, 84);
+$text-gray: rgb(75, 75, 75);
+$light-gray: rgb(89, 89, 89);
 
 $breakdown-width:900px;
 
@@ -17,7 +20,7 @@ body, #root  {
 #anicanvas {
   width: 100%;
   height: 100%;
-  background: linear-gradient(-5deg, #015f81 0%, #0278a2 20%, $main-blue 50%, $main-yellow 50%, rgb(220, 137, 20)  80%, $dark-yellow 100%);
+  background: linear-gradient(-5deg, $dark-blue 0%, $thick-blue 20%, $main-blue 50%, $main-yellow 50%, rgb(220, 137, 20)  75%, $dark-yellow 100%);
   z-index: 0;
 }
 #loginbox  {
@@ -78,7 +81,7 @@ body, #root  {
 }
 
 #navb {
-  background-color: $main-blue;
+  background: linear-gradient(to right, $dark-blue, $light-blue);
   text-align: left;
 }
 .sidebar {
@@ -196,15 +199,29 @@ input:-internal-autofill-selected {
   color: rgb(1, 59, 79); 
 }
 .nav-tabs .nav-link {
-  background-color: #B1D7EB; 
+  background-color: #cfd0d2;
+  padding: 0.4em 0.8em;
+  text-transform: uppercase !important;
+  color: $light-gray;
+}
+
+#responsive-navbar-nav .nav-link {
+  color: white !important; //$dark-blue !important;
+  text-shadow: 0.1em 0.1em 0.51em rgba(4, 57, 84, 0.9);
 }
 .nav-tabs .nav-link.active {
-  background-color: #EAF2F8;
+  border-top: solid 6px $main-yellow !important;
+  padding-top: 2px;
+  border-left: none;
+  border-right: none;
+  background-color: #eaf2f8;
   border-bottom: none;
+  text-shadow: 1px 0px 0px $text-gray;
+  color: $text-gray;
 }
 .nav-tabs {
-  background-color:rgba(0, 151,206, 0.3);
-  }
+  background-color: #cfd0d2;
+}
   
 .datascopeuse {  
   .nav-tabs .nav-link {
