--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -578,3 +578,13 @@ pre {
 .rbt-menu {
   max-height: 600px !important;
 }
+.w-40em {
+  width: 40em !important;
+}
+.w-20em {
+  width: 20em !important;
+}
+.modal-title {
+  overflow-x: scroll;
+  margin-right: 4px;
+}
